--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Oier Aguirre Rua</title>
+    <link rel="icon" href="img/icon logo.png" type="image/x-icon">
+<link rel="stylesheet" href="CSS/reset.css">
+<link rel="stylesheet" href="CSS/main.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I´m just writing something here just to try.</p>
+<header class="header-main">
+    </div>
+    <div class="header-main-logo">
+         <img src="img/Logo_Oier_withoutbackground.png" alt="Logo">
+         <nav class="header-main-navigation">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutme.html">ABOUT ME</a></li>
+                <li><a href="songwriting.html">SONGWRITING</a></li>
+                <li><a href="production.html">PRODUCTION</a></li>
+                <li><a href="filmscoring.html">FILM SCORING</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+         </nav>
+
+    </div>
+    <div class="header-main-socialmedia">
+        <a href="https://www.instagram.com/oieraguirre/" target="_blank"><div class="header-main-socialmedia-insta">
+            <div class="header-main-socialmedia-insta-tag">@oieraguirre</div>
+        </a>
+        </div>
+        <a href="https://www.tiktok.com/@oier_aguirre" target="_blank"><div class="header-main-socialmedia-tiktok">
+            <div class="header-main-socialmedia-tiktok-tag">@oier_aguirre</div>
+        </a>
+        </div>
+    </div>
+</header>
+
+<div class="oier-image">
+    <img src="img/Oier-44.png" alt="Main Picture Oier" class="oier-img">
+</div>
+<h1 class="Oier">OIER</h1>
+<div class="last-name">
+    <h2 class="Aguirre">Aguirre</h2>
+    <h3 class="Rua">Rua</h3>
+</div>
+
+   
 </body>
 </html>
