New Changes after deleting everything

--- a/filmscoring.html
+++ b/filmscoring.html
@@ -37,3 +37,19 @@
         </div>
     </div>
 </header>
+</body>
+
+<section class="film-header">Check out some of my work for <span class="film-header-filmscenes">FILM SCENES !</span></section>
+    <div class="videos-film">
+        <div class="videos-up-row">  
+            <video src="Film Scoring/The Dark Knight - Chasing_Action.mp4" width=400 controls poster="Posters/The Dark Knight Poster.png"></video>
+            <video src="Film Scoring/Jump Street - Comedy.mp4" width=420 controls poster="Posters/21jumpstreet.jpg"></video>
+            <video src="Film Scoring/Jurassic Park.mp4" width=400 controls poster="Posters/Cramp Cretaceous Poster.png"></video>   
+        </div>
+        <div class="videos-down-row">
+            <video src="Film Scoring/Get Out-Thriller.mp4" width=400 controls poster="Posters/Get Out.jpg"></video>
+            <video src="Film Scoring/Shape Of Water-Action.mp4" width=420 controls poster="Posters/the-shape-of-water.jpg"></video>
+            <video src="Film Scoring/Little Women - Romance_Drama.mp4" width=400 controls poster="Posters/Little Women.jpg"></video>   
+        </div>
+    </div>
+
