--- a/filmscoring.html
+++ b/filmscoring.html
@@ -39,7 +39,7 @@
 </header>
 </body>
 
-<section class="film-header">Check out some of my work for <span class="film-header-filmscenes">FILM SCENES !</span></section>
+<section class="film-header"><span>Check out some of my work for</span> <span class="film-header-filmscenes">FILM SCENES !</span></section>
     <div class="videos-film">
         <div class="videos-up-row">  
             <video src="Film Scoring/The Dark Knight - Chasing_Action.mp4" width=400 controls poster="Posters/The Dark Knight Poster.png"></video>
