--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
          <nav class="header-main-navigation">
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutme.html">ABOUT ME</a></li>
+                <li class="aboutme-nav"><a href="aboutme.html">ABOUT ME</a></li>
                 <li><a href="songwriting.html">SONGWRITING</a></li>
                 <li><a href="production.html">PRODUCTION</a></li>
                 <li><a href="filmscoring.html">FILM SCORING</a></li>
@@ -42,7 +42,7 @@
 </div>
 
 <main class="aboutme-text">
-    <h1>Meet Oier!</h1>
+    <h1>Meet <span class="oier">Oier</span>!</h1>
     <h2><p>Oier Aguirre Rua is a 20 year old singer-songwriter born in the Basque Country, Spain. Starting his music path at the age of 7 years old, Oier has been involved in a great variety of music styles ranging from classical music to Pop, Singer-Songwriter, R&B or Electronic music, among others.</p><br>
 
         <p>His passion for singing begun at a really young age, often performing songs from his favorite TV shows for his family.  His formal music education started when he became a classical percussionist and learned piano at his hometown conservatory. At 10, Oier joined the prestigious international youth choir, "Kantika Korala," embarking on tours across countries like France, Portugal, Italy, and Israel. Over the next eight years, he participated in international choir festivals, winning first prizes in categories like Folk, Children’s, and the Grand Prix at the "Rimini International Choral Competition - 2017" in Italy, as well as the top prize at Spain’s national "Certamen Coral de Avilés" competition.</p><br>
