--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
          <img src="img/Logo_Oier_withoutbackground.png" alt="Logo">
          <nav class="header-main-navigation">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutme.html">ABOUT ME</a></li>
-                <li><a href="songwriting.html">SONGWRITING</a></li>
-                <li><a href="production.html">PRODUCTION</a></li>
-                <li><a href="filmscoring.html">FILM SCORING</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li class="home-nav"><a href="index.html">HOME</a></li>
+                <li class="aboutme-nav"><a href="aboutme.html">ABOUT ME</a></li>
+                <li class="songwriting-nav"><a href="songwriting.html">SONGWRITING</a></li>
+                <li class="production-nav"><a href="production.html">PRODUCTION</a></li>
+                <li class="filmscoring-nav"><a href="filmscoring.html">FILM SCORING</a></li>
+                <li class="contact-nav"><a href="contact.html">CONTACT</a></li>
             </ul>
          </nav>
 
