OMG that was so much work

--- a/production.html
+++ b/production.html
@@ -5,37 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oier Aguirre Rua</title>
     <link rel="icon" href="img/icon logo.png" type="image/x-icon">
-<link rel="stylesheet" href="CSS/reset.css">
-<link rel="stylesheet" href="CSS/production.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/production.css">
 </head>
 
 <body>
 <header class="header-main">
-    </div>
     <div class="header-main-logo">
          <img src="img/Logo_Oier_withoutbackground.png" alt="Logo">
          <nav class="header-main-navigation">
-            <ul>
-                <li class="home-nav"><a href="index.html">HOME</a></li>
-                <li class="aboutme-nav"><a href="aboutme.html">ABOUT ME</a></li>
-                <li class="songwriting-nav"><a href="songwriting.html">SONGWRITING</a></li>
-                <li class="production-nav"><a href="production.html">PRODUCTION</a></li>
-                <li class="filmscoring-nav"><a href="filmscoring.html">FILM SCORING</a></li>
-                <li class="contact-nav"><a href="contact.html">CONTACT</a></li>
-            </ul>
+             <ul>
+                 <li class="home-nav"><a href="index.html">HOME</a></li>
+                 <li class="aboutme-nav"><a href="aboutme.html">ABOUT ME</a></li>
+                 <li class="songwriting-nav"><a href="songwriting.html">SONGWRITING</a></li>
+                 <li class="production-nav"><a href="production.html">PRODUCTION</a></li>
+                 <li class="filmscoring-nav"><a href="filmscoring.html">FILM SCORING</a></li>
+                 <li class="contact-nav"><a href="contact.html">CONTACT</a></li>
+             </ul>
          </nav>
-
     </div>
     <div class="header-main-socialmedia">
-        <a href="https://www.instagram.com/oieraguirre/" target="_blank"><div class="header-main-socialmedia-insta">
-            <div class="header-main-socialmedia-insta-tag">@oieraguirre</div>
+        <a href="https://www.instagram.com/oieraguirre/" target="_blank">
+            <div class="header-main-socialmedia-insta">
+                <div class="header-main-socialmedia-insta-tag">@oieraguirre</div>
+            </div>
         </a>
-        </div>
-        <a href="https://www.tiktok.com/@oier_aguirre" target="_blank"><div class="header-main-socialmedia-tiktok">
-            <div class="header-main-socialmedia-tiktok-tag">@oier_aguirre</div>
+        <a href="https://www.tiktok.com/@oier_aguirre" target="_blank">
+            <div class="header-main-socialmedia-tiktok">
+                <div class="header-main-socialmedia-tiktok-tag">@oier_aguirre</div>
+            </div>
         </a>
-        </div>
     </div>
 </header>
 
 <section class="production-header"><span>Want to hear some of my </span> <span class="production-header-productions"> Productions</span>?</section>
+
+<div class="production-img">
+    <img src="img/Production.png" alt="image of pro tools">
+</div>
+
+<div class="audio-container">
+    <div>
+        <h1 class="tropical-house"> "Tropical Sunset"</h1>
+        <audio src="Production/house_tropical.mp3" controls autoplay type="audio/mpeg"></audio>
+    </div>
+    <br>
+    <br>
+    <div>
+        <h1 class="they-wont-get-us"> "They Won´t Get Us"</h1>
+        <audio src="Production/beatelectronico.mp3" controls autoplay type="audio/mpeg"></audio>
+    </div>
+    <br>
+    <br>
+    <div>
+        <h1 class="countless-hours"> "Countless Hours"</h1>
+        <audio src="Production/countless_hours.mp3" controls autoplay type="audio/mpeg"></audio>
+    </div>
+</div>
+
+</body>
+</html>
