--- a/songwriting.html
+++ b/songwriting.html
@@ -39,3 +39,4 @@
 </header>
 
 <section class="songwriting-header"><span>Listen to some of my</span> <span class="songwriting-header-songs"> SONGS</span>!</section>
+</body>
