--- a/production.html
+++ b/production.html
@@ -47,19 +47,19 @@
 <div class="audio-container">
     <div>
         <h1 class="tropical-house"> "Tropical Sunset"</h1>
-        <audio src="Production/house_tropical.mp3" controls autoplay type="audio/mpeg"></audio>
+        <audio src="Production/house_tropical.mp3" controls type="audio/mpeg"></audio>
     </div>
     <br>
     <br>
     <div>
         <h1 class="they-wont-get-us"> "They Won´t Get Us"</h1>
-        <audio src="Production/beatelectronico.mp3" controls autoplay type="audio/mpeg"></audio>
+        <audio src="Production/beatelectronico.mp3" controls type="audio/mpeg"></audio>
     </div>
     <br>
     <br>
     <div>
         <h1 class="countless-hours"> "Countless Hours"</h1>
-        <audio src="Production/countless_hours.mp3" controls autoplay type="audio/mpeg"></audio>
+        <audio src="Production/countless_hours.mp3" controls type="audio/mpeg"></audio>
     </div>
 </div>
 
