songwriting in lesgooo

--- a/songwriting.html
+++ b/songwriting.html
@@ -39,4 +39,32 @@
 </header>
 
 <section class="songwriting-header"><span>Listen to some of my</span> <span class="songwriting-header-songs"> SONGS</span>!</section>
+
+<div class="guitar-audio">
+    <div class="guitar-img">
+        <img src="img/guitar.png" alt="guitar playing">
+    </div>
+
+    <div class="audio-container">
+        <div>
+            <h1 class="palabras-de-titan"> "Palabras de Titán"</h1>
+            <audio src="Songwriting/palabras-de-titan.mp3" controls type="audio/mpeg"></audio>
+        </div>
+        <br>
+        <br>
+        <div>
+            <h1 class="lost-your-chance"> "Lost Your Chance"</h1>
+            <audio src="Songwriting/lost_your_chance.mp3" controls type="audio/mpeg"></audio>
+        </div>
+        <br>
+        <br>
+        <div>
+            <h1 class="fall-apart"> "Fall Apart"</h1>
+            <audio src="Songwriting/fall_apart.mp3" controls type="audio/mpeg"></audio>
+        </div>
+    </div>
+</div>
+
 </body>
+</html>
+
