--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Oier Aguirre Rua</title>
     <link rel="icon" href="img/icon logo.png" type="image/x-icon">
 <link rel="stylesheet" href="CSS/reset.css">
-<link rel="stylesheet" href="CSS/contact.css">
+<link rel="stylesheet" href="CSS/main.css">
 </head>
 
 <body>
@@ -37,3 +37,11 @@
         </div>
     </div>
 </header>
+
+<div class="contact-img">
+    <img src="img/contact.png" alt="me playing in a rec session" class="contact-background-img">
+</div>
+
+   
+</body>
+</html>
