--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     </div>
 </header>
 
-<div class="contact-img">
+<div class="contact-image">
     <img src="img/contact.png" alt="me playing in a rec session" class="contact-background-img">
 </div>
 
